--- a/nlhCSS/homePageCSS.css
+++ b/nlhCSS/homePageCSS.css
@@ -15,13 +15,15 @@
     left: 10%;
     transform: translateY(-50%);
     color: white;
-    background-color: rgba(120, 62, 23, 0.81);
+    background-color: rgba(96, 58, 32, 0.81);
     padding: 20px;
     margin-left: -6%;
     border-radius: 8px;
-    width: 30%;
-    height: 50%;
+    width: min(80%, 400px);
+    max-width: 90%;
+    height: auto;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    word-wrap: break-word;
 }
 
 .intro-section .intro-text h1 {
@@ -32,8 +34,9 @@
 .intro-section .intro-text p {
     font-size: 1rem;
     margin: 0;
-    
+
 }
+
 .intro-section .intro-text a {
     font-size: 125%;
     font-weight: 1000;
@@ -43,6 +46,11 @@
     margin-left: 10%;
 
 }
+
+.intro-section .intro-text a:hover {
+    text-decoration: underline;
+}
+
 
 .success-stories {
     text-align: center;
@@ -66,7 +74,6 @@
 .success-stories .home-story-images div {
     text-align: center;
     flex: 0 1 calc(33.33% - 20px);
-    /* 3 items per row, with spacing */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -79,18 +86,15 @@
     height: auto;
     border-radius: 5px;
     transition: transform 0.3s ease;
-    /* Smooth zoom effect on hover */
 }
 
 .success-stories img:hover {
     transform: scale(1.05);
-    /* Slight zoom effect on hover */
 }
 
 .success-stories p {
     margin-top: 10px;
     font-size: 1.1rem;
-    /* Slightly larger font size */
     font-weight: 500;
     line-height: 1.6;
     color: #333;
@@ -117,9 +121,12 @@
     padding: 35px;
     padding-bottom: 50px;
     text-align: center;
-    height: 40%;
-
+    max-width: 100%;
+    height: auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    word-wrap: break-word;
 }
+
 
 .cat-care-section h2 {
     margin-bottom: 30px;
@@ -128,10 +135,24 @@
 }
 
 .cat-care-section p {
-    background-color: white;
-    height: 70%;
-    padding-top: 50px;
-    margin-bottom: 20px;
+    padding: 20px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    background-color: #fff0e0;
+    font-size: 1.2rem;
+    max-width: 100%;
+    height: auto;
+}
+
+.cat-care-section a {
+    text-decoration: none;
+    color: #735134;
+
+}
+
+.cat-care-section a:hover {
+    text-decoration: underline;
+
 }
 
 .cat-care-section textarea {
