--- a/nlhCSS/ourCatsCSS.css
+++ b/nlhCSS/ourCatsCSS.css
@@ -1,30 +1,47 @@
-/* intro section styling */
 .intro-section {
+    position: relative;
+    text-align: center;
+    height: 450px;
+}
+
+.intro-section img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 60%;
 }
 
-.intro-text {
+.intro-section .intro-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: white;
-    text-align: center;
-    padding-top: 1%;
-}
-
-.intro-text h1 {
-    margin-top: -1%;
-    font-size: 2.5em;
-    background-color: #735134;
-    padding: 20px;
-}
-
-.intro-text p {
-    background-color: white;
-    color: black;
-    width: 80%;
-    margin: 20px auto;
-    padding: 20px;
-    padding-bottom: 150px;
+    background-color: rgba(96, 58, 32, 0.81);
+    padding: 10px 0 45px;
     border-radius: 8px;
-    text-align: center;
+    width: 70%;
+    max-height: 270px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.intro-section .intro-text h1 {
+    font-size: 2.2rem;
+    margin-bottom: 10px;
+}
+
+.intro-section .intro-text p {
+    font-size: 1rem;
+    margin: 0;
+}
+
+.intro-text a {
+    color: #c35721;
+    text-decoration: none;
+}
+
+.intro-text a:hover {
+    text-decoration: underline;
 }
 
 .cat-profiles h1 {
@@ -38,7 +55,6 @@
     text-align: center;
 }
 
-/* style for dropdowns */
 select {
     background-color: #735134;
     color: white;
@@ -89,8 +105,15 @@ select:hover {
     width: 100%;
     height: auto;
     max-width: 300px;
-    max-height: 250px;
+    max-height: 200px;
     margin-bottom: 10px;
+    border-radius: 2.5%;
+}
+
+.cat-box img:hover {
+    width: 101%;
+    max-width: 320px;
+    max-height: 220px;
 }
 
 .cat-info {
@@ -110,10 +133,10 @@ select:hover {
     font-weight: bold;
 }
 
-/* page style */
 .pagination {
     text-align: center;
     margin-top: 30px;
+    padding-bottom: 30px;
 }
 
 .pagination a {
