--- a/nlhCSS/userViewApplicationsCSS.css
+++ b/nlhCSS/userViewApplicationsCSS.css
@@ -18,7 +18,8 @@
     border-collapse: collapse;
 }
 
-.applications-table th, .applications-table td {
+.applications-table th,
+.applications-table td {
     padding: 10px;
     text-align: center;
     border-bottom: 1px solid #ddd;
