--- a/nlhCSS/userViewAppointmentsCSS.css
+++ b/nlhCSS/userViewAppointmentsCSS.css
@@ -18,7 +18,8 @@
     border-collapse: collapse;
 }
 
-.appointments-table th, .appointments-table td {
+.appointments-table th,
+.appointments-table td {
     padding: 10px;
     text-align: center;
     border-bottom: 1px solid #ddd;
